ProgettoLC_parte4parz_Gruppo_7/Scala40Compiler/bnfc_files/ParGramm.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGramm.y
-----------------------------------------------------------------------------

state 33 contains 1 shift/reduce conflicts.
state 40 contains 14 shift/reduce conflicts.
state 42 contains 13 shift/reduce conflicts.
state 43 contains 5 shift/reduce conflicts.
state 45 contains 2 shift/reduce conflicts.
state 83 contains 1 shift/reduce conflicts.
state 96 contains 13 shift/reduce conflicts.
state 114 contains 1 shift/reduce conflicts.
state 120 contains 14 shift/reduce conflicts.
state 122 contains 5 shift/reduce conflicts.
state 123 contains 7 shift/reduce conflicts.
state 185 contains 1 shift/reduce conflicts.

rule 1 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	PTrue -> L_PTrue                                   (2)
	PFalse -> L_PFalse                                 (3)
	PReturn -> L_PReturn                               (4)
	PNull -> L_PNull                                   (5)
	PIdent -> L_PIdent                                 (6)
	PFloat -> L_PFloat                                 (7)
	PInteger -> L_PInteger                             (8)
	PString -> L_PString                               (9)
	PChar -> L_PChar                                   (10)
	TypeSpec -> SType                                  (11)
	TypeSpec -> '*' TypeSpec                           (12)
	TypeSpec -> 'Array' '[' TypeSpec ']' '(' PInteger ')'   (13)
	SType -> 'Float'                                   (14)
	SType -> 'Int'                                     (15)
	SType -> 'Char'                                    (16)
	SType -> 'String'                                  (17)
	SType -> 'Bool'                                    (18)
	Program -> ListDeclaration                         (19)
	ListDeclaration ->                                 (20)
	ListDeclaration -> ListDeclaration Declaration     (21)
	Declaration -> 'var' PIdent ':' TypeSpec '=' Exp ';'   (22)
	Declaration -> 'var' PIdent ':' TypeSpec ';'       (23)
	Declaration -> 'def' PIdent ListParamClause ':' TypeSpec '=' Block   (24)
	Declaration -> 'def' PIdent ListParamClause ':' TypeSpec '=' Exp ';'   (25)
	Declaration -> 'def' PIdent ListParamClause '=' Block   (26)
	Declaration -> 'def' PIdent ListParamClause '=' Exp ';'   (27)
	ListParamClause -> ParamClause                     (28)
	ListParamClause -> ParamClause ListParamClause     (29)
	ParamClause -> '(' ListArg ')'                     (30)
	ListArg ->                                         (31)
	ListArg -> Arg                                     (32)
	ListArg -> Arg ',' ListArg                         (33)
	Arg -> PIdent ':' TypeSpec                         (34)
	Block -> '{' ListStm '}'                           (35)
	ListStm ->                                         (36)
	ListStm -> ListStm Stm                             (37)
	Stm -> Declaration                                 (38)
	Stm -> Block                                       (39)
	Stm -> LExp '=' Exp ';'                            (40)
	Stm -> 'while' '(' Exp ')' Stm                     (41)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (42)
	Stm -> 'if' '(' Exp ')' Stm                        (43)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (44)
	Stm -> PReturn ';'                                 (45)
	Stm -> PReturn Exp ';'                             (46)
	Stm -> PIdent ListParams ';'                       (47)
	Stm -> LExp OpAssign Exp ';'                       (48)
	OpAssign -> '*='                                   (49)
	OpAssign -> '/='                                   (50)
	OpAssign -> '%='                                   (51)
	OpAssign -> '+='                                   (52)
	OpAssign -> '-='                                   (53)
	OpAssign -> '^='                                   (54)
	Params -> '(' ListExp ')'                          (55)
	ListParams -> Params                               (56)
	ListParams -> Params ListParams                    (57)
	ListExp ->                                         (58)
	ListExp -> Exp                                     (59)
	ListExp -> Exp ',' ListExp                         (60)
	Op -> '||'                                         (61)
	Op -> Op1                                          (62)
	Op1 -> '&&'                                        (63)
	Op1 -> Op2                                         (64)
	Op2 -> '<'                                         (65)
	Op2 -> '<='                                        (66)
	Op2 -> '>'                                         (67)
	Op2 -> '>='                                        (68)
	Op2 -> '=='                                        (69)
	Op2 -> '!='                                        (70)
	Op2 -> Op3                                         (71)
	Op3 -> '+'                                         (72)
	Op3 -> '-'                                         (73)
	Op3 -> Op4                                         (74)
	Op4 -> '*'                                         (75)
	Op4 -> '/'                                         (76)
	Op4 -> '%'                                         (77)
	Op4 -> Op5                                         (78)
	Op5 -> '^'                                         (79)
	Op5 -> '(' Op ')'                                  (80)
	Exp -> Exp Op Exp1                                 (81)
	Exp -> Exp1                                        (82)
	Exp1 -> Exp1 Op1 Exp2                              (83)
	Exp1 -> Exp2                                       (84)
	Exp2 -> '!' Exp2                                   (85)
	Exp2 -> Exp3 Op2 Exp3                              (86)
	Exp2 -> Exp3                                       (87)
	Exp3 -> Exp3 Op3 Exp4                              (88)
	Exp3 -> Exp4                                       (89)
	Exp4 -> Exp4 Op4 Exp5                              (90)
	Exp4 -> Exp5                                       (91)
	Exp5 -> Exp6 Op5 Exp7                              (92)
	Exp5 -> Exp6                                       (93)
	Exp6 -> '-' Exp7                                   (94)
	Exp6 -> Exp7                                       (95)
	Exp7 -> LExp                                       (96)
	Exp7 -> '&' LExp                                   (97)
	Exp7 -> PInteger                                   (98)
	Exp7 -> PFloat                                     (99)
	Exp7 -> PChar                                      (100)
	Exp7 -> PString                                    (101)
	Exp7 -> PTrue                                      (102)
	Exp7 -> PFalse                                     (103)
	Exp7 -> PNull                                      (104)
	Exp7 -> 'Array' '(' ListExp ')'                    (105)
	Exp7 -> PIdent ListParams                          (106)
	Exp7 -> '(' Exp ')'                                (107)
	LExp -> '*' LExp                                   (108)
	LExp -> LExp1                                      (109)
	LExp1 -> LExp1 '[' Exp ']'                         (110)
	LExp1 -> PIdent                                    (111)
	LExp1 -> '(' LExp ')'                              (112)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'+='           { PT _ (TS _ 12) }
	','            { PT _ (TS _ 13) }
	'-'            { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'/'            { PT _ (TS _ 16) }
	'/='           { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	';'            { PT _ (TS _ 19) }
	'<'            { PT _ (TS _ 20) }
	'<='           { PT _ (TS _ 21) }
	'='            { PT _ (TS _ 22) }
	'=='           { PT _ (TS _ 23) }
	'>'            { PT _ (TS _ 24) }
	'>='           { PT _ (TS _ 25) }
	'Array'        { PT _ (TS _ 26) }
	'Bool'         { PT _ (TS _ 27) }
	'Char'         { PT _ (TS _ 28) }
	'Float'        { PT _ (TS _ 29) }
	'Int'          { PT _ (TS _ 30) }
	'String'       { PT _ (TS _ 31) }
	'['            { PT _ (TS _ 32) }
	']'            { PT _ (TS _ 33) }
	'^'            { PT _ (TS _ 34) }
	'^='           { PT _ (TS _ 35) }
	'def'          { PT _ (TS _ 36) }
	'do'           { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'if'           { PT _ (TS _ 39) }
	'var'          { PT _ (TS _ 40) }
	'while'        { PT _ (TS _ 41) }
	'{'            { PT _ (TS _ 42) }
	'||'           { PT _ (TS _ 43) }
	'}'            { PT _ (TS _ 44) }
	L_integ        { PT _ (TI $$) }
	L_PTrue        { PT _ (T_PTrue _) }
	L_PFalse       { PT _ (T_PFalse _) }
	L_PReturn      { PT _ (T_PReturn _) }
	L_PNull        { PT _ (T_PNull _) }
	L_PIdent       { PT _ (T_PIdent _) }
	L_PFloat       { PT _ (T_PFloat _) }
	L_PInteger     { PT _ (T_PInteger _) }
	L_PString      { PT _ (T_PString _) }
	L_PChar        { PT _ (T_PChar _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	PTrue           rule  2
	PFalse          rule  3
	PReturn         rule  4
	PNull           rule  5
	PIdent          rule  6
	PFloat          rule  7
	PInteger        rule  8
	PString         rule  9
	PChar           rule  10
	TypeSpec        rules 11, 12, 13
	SType           rules 14, 15, 16, 17, 18
	Program         rule  19
	ListDeclaration rules 20, 21
	Declaration     rules 22, 23, 24, 25, 26, 27
	ListParamClause rules 28, 29
	ParamClause     rule  30
	ListArg         rules 31, 32, 33
	Arg             rule  34
	Block           rule  35
	ListStm         rules 36, 37
	Stm             rules 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48
	OpAssign        rules 49, 50, 51, 52, 53, 54
	Params          rule  55
	ListParams      rules 56, 57
	ListExp         rules 58, 59, 60
	Op              rules 61, 62
	Op1             rules 63, 64
	Op2             rules 65, 66, 67, 68, 69, 70, 71
	Op3             rules 72, 73, 74
	Op4             rules 75, 76, 77, 78
	Op5             rules 79, 80
	Exp             rules 81, 82
	Exp1            rules 83, 84
	Exp2            rules 85, 86, 87
	Exp3            rules 88, 89
	Exp4            rules 90, 91
	Exp5            rules 92, 93
	Exp6            rules 94, 95
	Exp7            rules 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107
	LExp            rules 108, 109
	LExp1           rules 110, 111, 112

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'def'          reduce using rule 20
	'var'          reduce using rule 20
	%eof           reduce using rule 20

	Program        goto state 3
	ListDeclarationgoto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)



State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDeclaration .                        (rule 19)
	ListDeclaration -> ListDeclaration . Declaration    (rule 21)

	'def'          shift, and enter state 6
	'var'          shift, and enter state 7
	%eof           reduce using rule 19

	Declaration    goto state 5

State 5

	ListDeclaration -> ListDeclaration Declaration .    (rule 21)

	'def'          reduce using rule 21
	'var'          reduce using rule 21
	%eof           reduce using rule 21


State 6

	Declaration -> 'def' . PIdent ListParamClause ':' TypeSpec '=' Block    (rule 24)
	Declaration -> 'def' . PIdent ListParamClause ':' TypeSpec '=' Exp ';'    (rule 25)
	Declaration -> 'def' . PIdent ListParamClause '=' Block    (rule 26)
	Declaration -> 'def' . PIdent ListParamClause '=' Exp ';'    (rule 27)

	L_PIdent       shift, and enter state 9

	PIdent         goto state 10

State 7

	Declaration -> 'var' . PIdent ':' TypeSpec '=' Exp ';'    (rule 22)
	Declaration -> 'var' . PIdent ':' TypeSpec ';'      (rule 23)

	L_PIdent       shift, and enter state 9

	PIdent         goto state 8

State 8

	Declaration -> 'var' PIdent . ':' TypeSpec '=' Exp ';'    (rule 22)
	Declaration -> 'var' PIdent . ':' TypeSpec ';'      (rule 23)

	':'            shift, and enter state 14


State 9

	PIdent -> L_PIdent .                                (rule 6)

	'!='           reduce using rule 6
	'%'            reduce using rule 6
	'%='           reduce using rule 6
	'&&'           reduce using rule 6
	'('            reduce using rule 6
	')'            reduce using rule 6
	'*'            reduce using rule 6
	'*='           reduce using rule 6
	'+'            reduce using rule 6
	'+='           reduce using rule 6
	','            reduce using rule 6
	'-'            reduce using rule 6
	'-='           reduce using rule 6
	'/'            reduce using rule 6
	'/='           reduce using rule 6
	':'            reduce using rule 6
	';'            reduce using rule 6
	'<'            reduce using rule 6
	'<='           reduce using rule 6
	'='            reduce using rule 6
	'=='           reduce using rule 6
	'>'            reduce using rule 6
	'>='           reduce using rule 6
	'['            reduce using rule 6
	']'            reduce using rule 6
	'^'            reduce using rule 6
	'^='           reduce using rule 6
	'||'           reduce using rule 6


State 10

	Declaration -> 'def' PIdent . ListParamClause ':' TypeSpec '=' Block    (rule 24)
	Declaration -> 'def' PIdent . ListParamClause ':' TypeSpec '=' Exp ';'    (rule 25)
	Declaration -> 'def' PIdent . ListParamClause '=' Block    (rule 26)
	Declaration -> 'def' PIdent . ListParamClause '=' Exp ';'    (rule 27)

	'('            shift, and enter state 13

	ListParamClausegoto state 11
	ParamClause    goto state 12

State 11

	Declaration -> 'def' PIdent ListParamClause . ':' TypeSpec '=' Block    (rule 24)
	Declaration -> 'def' PIdent ListParamClause . ':' TypeSpec '=' Exp ';'    (rule 25)
	Declaration -> 'def' PIdent ListParamClause . '=' Block    (rule 26)
	Declaration -> 'def' PIdent ListParamClause . '=' Exp ';'    (rule 27)

	':'            shift, and enter state 28
	'='            shift, and enter state 29


State 12

	ListParamClause -> ParamClause .                    (rule 28)
	ListParamClause -> ParamClause . ListParamClause    (rule 29)

	'('            shift, and enter state 13
	':'            reduce using rule 28
	'='            reduce using rule 28

	ListParamClausegoto state 27
	ParamClause    goto state 12

State 13

	ParamClause -> '(' . ListArg ')'                    (rule 30)

	')'            reduce using rule 31
	L_PIdent       shift, and enter state 9

	PIdent         goto state 24
	ListArg        goto state 25
	Arg            goto state 26

State 14

	Declaration -> 'var' PIdent ':' . TypeSpec '=' Exp ';'    (rule 22)
	Declaration -> 'var' PIdent ':' . TypeSpec ';'      (rule 23)

	'*'            shift, and enter state 17
	'Array'        shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Char'         shift, and enter state 20
	'Float'        shift, and enter state 21
	'Int'          shift, and enter state 22
	'String'       shift, and enter state 23

	TypeSpec       goto state 15
	SType          goto state 16

State 15

	Declaration -> 'var' PIdent ':' TypeSpec . '=' Exp ';'    (rule 22)
	Declaration -> 'var' PIdent ':' TypeSpec . ';'      (rule 23)

	';'            shift, and enter state 69
	'='            shift, and enter state 70


State 16

	TypeSpec -> SType .                                 (rule 11)

	')'            reduce using rule 11
	','            reduce using rule 11
	';'            reduce using rule 11
	'='            reduce using rule 11
	']'            reduce using rule 11


State 17

	TypeSpec -> '*' . TypeSpec                          (rule 12)

	'*'            shift, and enter state 17
	'Array'        shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Char'         shift, and enter state 20
	'Float'        shift, and enter state 21
	'Int'          shift, and enter state 22
	'String'       shift, and enter state 23

	TypeSpec       goto state 68
	SType          goto state 16

State 18

	TypeSpec -> 'Array' . '[' TypeSpec ']' '(' PInteger ')'    (rule 13)

	'['            shift, and enter state 67


State 19

	SType -> 'Bool' .                                   (rule 18)

	')'            reduce using rule 18
	','            reduce using rule 18
	';'            reduce using rule 18
	'='            reduce using rule 18
	']'            reduce using rule 18


State 20

	SType -> 'Char' .                                   (rule 16)

	')'            reduce using rule 16
	','            reduce using rule 16
	';'            reduce using rule 16
	'='            reduce using rule 16
	']'            reduce using rule 16


State 21

	SType -> 'Float' .                                  (rule 14)

	')'            reduce using rule 14
	','            reduce using rule 14
	';'            reduce using rule 14
	'='            reduce using rule 14
	']'            reduce using rule 14


State 22

	SType -> 'Int' .                                    (rule 15)

	')'            reduce using rule 15
	','            reduce using rule 15
	';'            reduce using rule 15
	'='            reduce using rule 15
	']'            reduce using rule 15


State 23

	SType -> 'String' .                                 (rule 17)

	')'            reduce using rule 17
	','            reduce using rule 17
	';'            reduce using rule 17
	'='            reduce using rule 17
	']'            reduce using rule 17


State 24

	Arg -> PIdent . ':' TypeSpec                        (rule 34)

	':'            shift, and enter state 66


State 25

	ParamClause -> '(' ListArg . ')'                    (rule 30)

	')'            shift, and enter state 65


State 26

	ListArg -> Arg .                                    (rule 32)
	ListArg -> Arg . ',' ListArg                        (rule 33)

	')'            reduce using rule 32
	','            shift, and enter state 64


State 27

	ListParamClause -> ParamClause ListParamClause .    (rule 29)

	':'            reduce using rule 29
	'='            reduce using rule 29


State 28

	Declaration -> 'def' PIdent ListParamClause ':' . TypeSpec '=' Block    (rule 24)
	Declaration -> 'def' PIdent ListParamClause ':' . TypeSpec '=' Exp ';'    (rule 25)

	'*'            shift, and enter state 17
	'Array'        shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Char'         shift, and enter state 20
	'Float'        shift, and enter state 21
	'Int'          shift, and enter state 22
	'String'       shift, and enter state 23

	TypeSpec       goto state 63
	SType          goto state 16

State 29

	Declaration -> 'def' PIdent ListParamClause '=' . Block    (rule 26)
	Declaration -> 'def' PIdent ListParamClause '=' . Exp ';'    (rule 27)

	'!'            shift, and enter state 49
	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 52
	'-'            shift, and enter state 53
	'Array'        shift, and enter state 54
	'{'            shift, and enter state 55
	L_PTrue        shift, and enter state 56
	L_PFalse       shift, and enter state 57
	L_PNull        shift, and enter state 58
	L_PIdent       shift, and enter state 9
	L_PFloat       shift, and enter state 59
	L_PInteger     shift, and enter state 60
	L_PString      shift, and enter state 61
	L_PChar        shift, and enter state 62

	PTrue          goto state 30
	PFalse         goto state 31
	PNull          goto state 32
	PIdent         goto state 33
	PFloat         goto state 34
	PInteger       goto state 35
	PString        goto state 36
	PChar          goto state 37
	Block          goto state 38
	Exp            goto state 39
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46
	LExp           goto state 47
	LExp1          goto state 48

State 30

	Exp7 -> PTrue .                                     (rule 102)

	'!='           reduce using rule 102
	'%'            reduce using rule 102
	'&&'           reduce using rule 102
	'('            reduce using rule 102
	')'            reduce using rule 102
	'*'            reduce using rule 102
	'+'            reduce using rule 102
	','            reduce using rule 102
	'-'            reduce using rule 102
	'/'            reduce using rule 102
	';'            reduce using rule 102
	'<'            reduce using rule 102
	'<='           reduce using rule 102
	'=='           reduce using rule 102
	'>'            reduce using rule 102
	'>='           reduce using rule 102
	']'            reduce using rule 102
	'^'            reduce using rule 102
	'||'           reduce using rule 102


State 31

	Exp7 -> PFalse .                                    (rule 103)

	'!='           reduce using rule 103
	'%'            reduce using rule 103
	'&&'           reduce using rule 103
	'('            reduce using rule 103
	')'            reduce using rule 103
	'*'            reduce using rule 103
	'+'            reduce using rule 103
	','            reduce using rule 103
	'-'            reduce using rule 103
	'/'            reduce using rule 103
	';'            reduce using rule 103
	'<'            reduce using rule 103
	'<='           reduce using rule 103
	'=='           reduce using rule 103
	'>'            reduce using rule 103
	'>='           reduce using rule 103
	']'            reduce using rule 103
	'^'            reduce using rule 103
	'||'           reduce using rule 103


State 32

	Exp7 -> PNull .                                     (rule 104)

	'!='           reduce using rule 104
	'%'            reduce using rule 104
	'&&'           reduce using rule 104
	'('            reduce using rule 104
	')'            reduce using rule 104
	'*'            reduce using rule 104
	'+'            reduce using rule 104
	','            reduce using rule 104
	'-'            reduce using rule 104
	'/'            reduce using rule 104
	';'            reduce using rule 104
	'<'            reduce using rule 104
	'<='           reduce using rule 104
	'=='           reduce using rule 104
	'>'            reduce using rule 104
	'>='           reduce using rule 104
	']'            reduce using rule 104
	'^'            reduce using rule 104
	'||'           reduce using rule 104


State 33

	Exp7 -> PIdent . ListParams                         (rule 106)
	LExp1 -> PIdent .                                   (rule 111)

	'!='           reduce using rule 111
	'%'            reduce using rule 111
	'&&'           reduce using rule 111
	'('            shift, and enter state 116
			(reduce using rule 111)

	')'            reduce using rule 111
	'*'            reduce using rule 111
	'+'            reduce using rule 111
	','            reduce using rule 111
	'-'            reduce using rule 111
	'/'            reduce using rule 111
	';'            reduce using rule 111
	'<'            reduce using rule 111
	'<='           reduce using rule 111
	'=='           reduce using rule 111
	'>'            reduce using rule 111
	'>='           reduce using rule 111
	'['            reduce using rule 111
	']'            reduce using rule 111
	'^'            reduce using rule 111
	'||'           reduce using rule 111

	Params         goto state 114
	ListParams     goto state 115

State 34

	Exp7 -> PFloat .                                    (rule 99)

	'!='           reduce using rule 99
	'%'            reduce using rule 99
	'&&'           reduce using rule 99
	'('            reduce using rule 99
	')'            reduce using rule 99
	'*'            reduce using rule 99
	'+'            reduce using rule 99
	','            reduce using rule 99
	'-'            reduce using rule 99
	'/'            reduce using rule 99
	';'            reduce using rule 99
	'<'            reduce using rule 99
	'<='           reduce using rule 99
	'=='           reduce using rule 99
	'>'            reduce using rule 99
	'>='           reduce using rule 99
	']'            reduce using rule 99
	'^'            reduce using rule 99
	'||'           reduce using rule 99


State 35

	Exp7 -> PInteger .                                  (rule 98)

	'!='           reduce using rule 98
	'%'            reduce using rule 98
	'&&'           reduce using rule 98
	'('            reduce using rule 98
	')'            reduce using rule 98
	'*'            reduce using rule 98
	'+'            reduce using rule 98
	','            reduce using rule 98
	'-'            reduce using rule 98
	'/'            reduce using rule 98
	';'            reduce using rule 98
	'<'            reduce using rule 98
	'<='           reduce using rule 98
	'=='           reduce using rule 98
	'>'            reduce using rule 98
	'>='           reduce using rule 98
	']'            reduce using rule 98
	'^'            reduce using rule 98
	'||'           reduce using rule 98


State 36

	Exp7 -> PString .                                   (rule 101)

	'!='           reduce using rule 101
	'%'            reduce using rule 101
	'&&'           reduce using rule 101
	'('            reduce using rule 101
	')'            reduce using rule 101
	'*'            reduce using rule 101
	'+'            reduce using rule 101
	','            reduce using rule 101
	'-'            reduce using rule 101
	'/'            reduce using rule 101
	';'            reduce using rule 101
	'<'            reduce using rule 101
	'<='           reduce using rule 101
	'=='           reduce using rule 101
	'>'            reduce using rule 101
	'>='           reduce using rule 101
	']'            reduce using rule 101
	'^'            reduce using rule 101
	'||'           reduce using rule 101


State 37

	Exp7 -> PChar .                                     (rule 100)

	'!='           reduce using rule 100
	'%'            reduce using rule 100
	'&&'           reduce using rule 100
	'('            reduce using rule 100
	')'            reduce using rule 100
	'*'            reduce using rule 100
	'+'            reduce using rule 100
	','            reduce using rule 100
	'-'            reduce using rule 100
	'/'            reduce using rule 100
	';'            reduce using rule 100
	'<'            reduce using rule 100
	'<='           reduce using rule 100
	'=='           reduce using rule 100
	'>'            reduce using rule 100
	'>='           reduce using rule 100
	']'            reduce using rule 100
	'^'            reduce using rule 100
	'||'           reduce using rule 100


State 38

	Declaration -> 'def' PIdent ListParamClause '=' Block .    (rule 26)

	'('            reduce using rule 26
	'*'            reduce using rule 26
	'def'          reduce using rule 26
	'do'           reduce using rule 26
	'else'         reduce using rule 26
	'if'           reduce using rule 26
	'var'          reduce using rule 26
	'while'        reduce using rule 26
	'{'            reduce using rule 26
	'}'            reduce using rule 26
	L_PReturn      reduce using rule 26
	L_PIdent       reduce using rule 26
	%eof           reduce using rule 26


State 39

	Declaration -> 'def' PIdent ListParamClause '=' Exp . ';'    (rule 27)
	Exp -> Exp . Op Exp1                                (rule 81)

	'!='           shift, and enter state 98
	'%'            shift, and enter state 92
	'&&'           shift, and enter state 109
	'('            shift, and enter state 88
	'*'            shift, and enter state 93
	'+'            shift, and enter state 99
	'-'            shift, and enter state 100
	'/'            shift, and enter state 94
	';'            shift, and enter state 112
	'<'            shift, and enter state 101
	'<='           shift, and enter state 102
	'=='           shift, and enter state 103
	'>'            shift, and enter state 104
	'>='           shift, and enter state 105
	'^'            shift, and enter state 89
	'||'           shift, and enter state 113

	Op             goto state 110
	Op1            goto state 111
	Op2            goto state 107
	Op3            goto state 108
	Op4            goto state 97
	Op5            goto state 91

State 40

	Exp -> Exp1 .                                       (rule 82)
	Exp1 -> Exp1 . Op1 Exp2                             (rule 83)

	'!='           shift, and enter state 98
			(reduce using rule 82)

	'%'            shift, and enter state 92
			(reduce using rule 82)

	'&&'           shift, and enter state 109
			(reduce using rule 82)

	'('            shift, and enter state 88
			(reduce using rule 82)

	')'            reduce using rule 82
	'*'            shift, and enter state 93
			(reduce using rule 82)

	'+'            shift, and enter state 99
			(reduce using rule 82)

	','            reduce using rule 82
	'-'            shift, and enter state 100
			(reduce using rule 82)

	'/'            shift, and enter state 94
			(reduce using rule 82)

	';'            reduce using rule 82
	'<'            shift, and enter state 101
			(reduce using rule 82)

	'<='           shift, and enter state 102
			(reduce using rule 82)

	'=='           shift, and enter state 103
			(reduce using rule 82)

	'>'            shift, and enter state 104
			(reduce using rule 82)

	'>='           shift, and enter state 105
			(reduce using rule 82)

	']'            reduce using rule 82
	'^'            shift, and enter state 89
			(reduce using rule 82)

	'||'           reduce using rule 82

	Op1            goto state 106
	Op2            goto state 107
	Op3            goto state 108
	Op4            goto state 97
	Op5            goto state 91

State 41

	Exp1 -> Exp2 .                                      (rule 84)

	'!='           reduce using rule 84
	'%'            reduce using rule 84
	'&&'           reduce using rule 84
	'('            reduce using rule 84
	')'            reduce using rule 84
	'*'            reduce using rule 84
	'+'            reduce using rule 84
	','            reduce using rule 84
	'-'            reduce using rule 84
	'/'            reduce using rule 84
	';'            reduce using rule 84
	'<'            reduce using rule 84
	'<='           reduce using rule 84
	'=='           reduce using rule 84
	'>'            reduce using rule 84
	'>='           reduce using rule 84
	']'            reduce using rule 84
	'^'            reduce using rule 84
	'||'           reduce using rule 84


State 42

	Exp2 -> Exp3 . Op2 Exp3                             (rule 86)
	Exp2 -> Exp3 .                                      (rule 87)
	Exp3 -> Exp3 . Op3 Exp4                             (rule 88)

	'!='           shift, and enter state 98
			(reduce using rule 87)

	'%'            shift, and enter state 92
			(reduce using rule 87)

	'&&'           reduce using rule 87
	'('            shift, and enter state 88
			(reduce using rule 87)

	')'            reduce using rule 87
	'*'            shift, and enter state 93
			(reduce using rule 87)

	'+'            shift, and enter state 99
			(reduce using rule 87)

	','            reduce using rule 87
	'-'            shift, and enter state 100
			(reduce using rule 87)

	'/'            shift, and enter state 94
			(reduce using rule 87)

	';'            reduce using rule 87
	'<'            shift, and enter state 101
			(reduce using rule 87)

	'<='           shift, and enter state 102
			(reduce using rule 87)

	'=='           shift, and enter state 103
			(reduce using rule 87)

	'>'            shift, and enter state 104
			(reduce using rule 87)

	'>='           shift, and enter state 105
			(reduce using rule 87)

	']'            reduce using rule 87
	'^'            shift, and enter state 89
			(reduce using rule 87)

	'||'           reduce using rule 87

	Op2            goto state 95
	Op3            goto state 96
	Op4            goto state 97
	Op5            goto state 91

State 43

	Exp3 -> Exp4 .                                      (rule 89)
	Exp4 -> Exp4 . Op4 Exp5                             (rule 90)

	'!='           reduce using rule 89
	'%'            shift, and enter state 92
			(reduce using rule 89)

	'&&'           reduce using rule 89
	'('            shift, and enter state 88
			(reduce using rule 89)

	')'            reduce using rule 89
	'*'            shift, and enter state 93
			(reduce using rule 89)

	'+'            reduce using rule 89
	','            reduce using rule 89
	'-'            reduce using rule 89
	'/'            shift, and enter state 94
			(reduce using rule 89)

	';'            reduce using rule 89
	'<'            reduce using rule 89
	'<='           reduce using rule 89
	'=='           reduce using rule 89
	'>'            reduce using rule 89
	'>='           reduce using rule 89
	']'            reduce using rule 89
	'^'            shift, and enter state 89
			(reduce using rule 89)

	'||'           reduce using rule 89

	Op4            goto state 90
	Op5            goto state 91

State 44

	Exp4 -> Exp5 .                                      (rule 91)

	'!='           reduce using rule 91
	'%'            reduce using rule 91
	'&&'           reduce using rule 91
	'('            reduce using rule 91
	')'            reduce using rule 91
	'*'            reduce using rule 91
	'+'            reduce using rule 91
	','            reduce using rule 91
	'-'            reduce using rule 91
	'/'            reduce using rule 91
	';'            reduce using rule 91
	'<'            reduce using rule 91
	'<='           reduce using rule 91
	'=='           reduce using rule 91
	'>'            reduce using rule 91
	'>='           reduce using rule 91
	']'            reduce using rule 91
	'^'            reduce using rule 91
	'||'           reduce using rule 91


State 45

	Exp5 -> Exp6 . Op5 Exp7                             (rule 92)
	Exp5 -> Exp6 .                                      (rule 93)

	'!='           reduce using rule 93
	'%'            reduce using rule 93
	'&&'           reduce using rule 93
	'('            shift, and enter state 88
			(reduce using rule 93)

	')'            reduce using rule 93
	'*'            reduce using rule 93
	'+'            reduce using rule 93
	','            reduce using rule 93
	'-'            reduce using rule 93
	'/'            reduce using rule 93
	';'            reduce using rule 93
	'<'            reduce using rule 93
	'<='           reduce using rule 93
	'=='           reduce using rule 93
	'>'            reduce using rule 93
	'>='           reduce using rule 93
	']'            reduce using rule 93
	'^'            shift, and enter state 89
			(reduce using rule 93)

	'||'           reduce using rule 93

	Op5            goto state 87

State 46

	Exp6 -> Exp7 .                                      (rule 95)

	'!='           reduce using rule 95
	'%'            reduce using rule 95
	'&&'           reduce using rule 95
	'('            reduce using rule 95
	')'            reduce using rule 95
	'*'            reduce using rule 95
	'+'            reduce using rule 95
	','            reduce using rule 95
	'-'            reduce using rule 95
	'/'            reduce using rule 95
	';'            reduce using rule 95
	'<'            reduce using rule 95
	'<='           reduce using rule 95
	'=='           reduce using rule 95
	'>'            reduce using rule 95
	'>='           reduce using rule 95
	']'            reduce using rule 95
	'^'            reduce using rule 95
	'||'           reduce using rule 95


State 47

	Exp7 -> LExp .                                      (rule 96)

	'!='           reduce using rule 96
	'%'            reduce using rule 96
	'&&'           reduce using rule 96
	'('            reduce using rule 96
	')'            reduce using rule 96
	'*'            reduce using rule 96
	'+'            reduce using rule 96
	','            reduce using rule 96
	'-'            reduce using rule 96
	'/'            reduce using rule 96
	';'            reduce using rule 96
	'<'            reduce using rule 96
	'<='           reduce using rule 96
	'=='           reduce using rule 96
	'>'            reduce using rule 96
	'>='           reduce using rule 96
	']'            reduce using rule 96
	'^'            reduce using rule 96
	'||'           reduce using rule 96


State 48

	LExp -> LExp1 .                                     (rule 109)
	LExp1 -> LExp1 . '[' Exp ']'                        (rule 110)
